	* src/gramps_main.py (init_interface): Set proper color for new icons.
	* src/gramps.glade (gramps): Label new buttons, left-align labels.
	* src/GrampsDbBase.py (get_event_column_order): Show date column.
	* src/EventView.py (Module): Add "Last Changed" column; do not
	hard-code handle column.
	* src/DisplayModels.py (EventModel.__init__): Switch column order.

2005-06-08  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EventView.py (column_names): Add missing column
	* src/RepositoryView.py (column_names): Add missing columns
	* src/GrampsDbBase.py: fix column_order methods
	* src/DisplayModels.py (RepositoryModel): Remove parish column because
	it is not editable anyway
	* src/gramps_main.py (column_order): add Repository View;
	(init_interface): Remove unneeded callback

2005-06-08  Alex Roitman  <shura@gramps-project.org>
	* src/ChooseParens.py: Support for (int,str) relationships.
	* src/FamilyView.py (new_child_after_edit): Use tuple relationships.
	* src/SelectChild.py: Support for (int,str) relationships.
	* src/gramps.glade (selec_child,modparents,familyDialog): Replace
	ComboBoxes with ComboBoxEntries.
	* src/RelLib.py (add_parent_family_handle,
	change_parent_family_handle): Correct the docstring to reflect
	tuple relationships.

2005-06-07  Alex Roitman  <shura@gramps-project.org>
	* src/gramps.glade (selecty_person): Change positioning; add icon.
	* src/edit_person.glade (event_tab): Correct tooltips.
	* src/SelectEvent.py: Add to CVS.
	* src/Makefile.am: Ship SelectEvent.py file.
	* src/SelectChild.py (build_list): Use mapping from Utils.
	* src/ReadGrdb.py (importData): Properly copy event table.
	* src/ListBox.py: Properly fill in the Combo maps without
	collisions; Add Role to the EventListbox; Support selecting an
	existing Event object.
	* src/GrampsInMemDB.py: Support for event id table.
	* src/GrampsDbBase.py: Support for event id table.
	* src/GrampsBSDDB.py: Support for event id table; emit
	event-delete signal when events are deleted.